--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".AddActivity" />
         <activity android:name=".CashflowActivity" />
+        <activity android:name=".SearchActivity" />
+
         <activity
             android:name=".RegisterActivity"
             android:exported="true"
