solve: bug in profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         <activity android:name=".AddActivity" />
         <activity android:name=".CashflowActivity" />
         <activity android:name=".SearchActivity" />
+        <activity android:name=".ProfileActivity" />
+
 
         <activity
             android:name=".RegisterActivity"
